# min-dat--weka-data

./: .gitignore  README.md  WekaData.cabal
src/: WekaData.hs
src/WekaData/Show/: Full.hs  Mixed.hs  Name.hs
