name: WekaData
version: 0.2.0.0
cabal-version: 1.12
build-type: Simple
license: MIT
license-file: "LICENSE"
extra-source-files: README.md

library
    build-depends:   base >=4.7
                   , split == 0.2.2
                   , containers > 0.5
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: WekaData
                     WekaData.Show.Name
                     WekaData.Show.Full
    default-extensions: DeriveDataTypeable
                        FlexibleContexts
                        UndecidableInstances

